--- a/000-default.conf
+++ b/000-default.conf
@@ -22,6 +22,18 @@
 
     Include /etc/apache2/conf-available/oidc.conf
 
+    <Directory /var/www/html/sso>
+        AllowOverride None
+        AuthType openid-connect
+        Require valid-user
+    </Directory>
+
+    <Directory /var/www/html/sso/js>
+        Allow from all
+        Satisfy Any
+        AddType application/x-httpd-php .js
+    </Directory>
+
 	# For most configuration files from conf-available/, which are
 	# enabled or disabled at a global level, it is possible to
 	# include a line for only one particular virtual host. For example the
